[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/Window/Window.tscn" type="PackedScene" id=1]
[ext_resource path="res://_tri_char_codex/SettingsWindow.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.752941 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="CodexWindow" instance=ExtResource( 1 )]
margin_left = -210.0
margin_top = -167.0
margin_right = 210.0
margin_bottom = 167.0
script = ExtResource( 2 )

[node name="VBoxContainer" parent="." index="0"]
margin_right = 419.0
margin_bottom = 333.0

[node name="TitleBar" parent="VBoxContainer" index="0"]
margin_right = 418.0

[node name="Title" parent="VBoxContainer/TitleBar" index="0"]
text = "Character Codex"

[node name="Close" type="Button" parent="VBoxContainer/TitleBar" index="1"]
unique_name_in_owner = true
margin_left = -1.0
margin_top = -1.0
margin_right = 36.0
margin_bottom = 11.0
text = "Close"

[node name="Settings" type="Button" parent="VBoxContainer/TitleBar" index="2"]
unique_name_in_owner = true
margin_left = 67.0
margin_top = -1.0
margin_right = 116.0
margin_bottom = 11.0
text = "Settings"

[node name="Contents" parent="VBoxContainer" index="1"]
margin_right = 418.0
margin_bottom = 332.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Contents" index="0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 417.0
margin_bottom = 321.0

[node name="LeftPanel" type="VBoxContainer" parent="VBoxContainer/Contents/HBoxContainer" index="0"]
margin_right = 113.0
margin_bottom = 320.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Contents/HBoxContainer/LeftPanel" index="0"]
margin_right = 113.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharList" type="VBoxContainer" parent="VBoxContainer/Contents/HBoxContainer/LeftPanel/ScrollContainer" index="0"]
unique_name_in_owner = true
margin_right = 113.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SearchLine" type="LineEdit" parent="VBoxContainer/Contents/HBoxContainer/LeftPanel" index="1"]
unique_name_in_owner = true
margin_top = 304.0
margin_right = 113.0
margin_bottom = 320.0
clear_button_enabled = true
placeholder_text = "Search"

[node name="Seperator" type="ColorRect" parent="VBoxContainer/Contents/HBoxContainer" index="1"]
margin_left = 114.0
margin_right = 115.0
margin_bottom = 320.0
rect_min_size = Vector2( 1, 1 )
color = Color( 1, 1, 1, 0.25098 )

[node name="Page" type="MarginContainer" parent="VBoxContainer/Contents/HBoxContainer" index="2"]
unique_name_in_owner = true
margin_left = 116.0
margin_right = 416.0
margin_bottom = 320.0
rect_min_size = Vector2( 300, 0 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="SettingsCover" type="Panel" parent="." index="1"]
visible = false
margin_left = 1.0
margin_top = 12.0
margin_right = 419.0
margin_bottom = 333.0
rect_min_size = Vector2( 0, 321 )
size_flags_horizontal = 3
size_flags_vertical = 8
custom_styles/panel = SubResource( 3 )

[node name="SettingsWindow" parent="." index="2" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_top = 90.0
margin_right = 360.0
margin_bottom = 244.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
static_ = true

[node name="VBoxContainer" parent="SettingsWindow" index="0"]
margin_right = 299.0
margin_bottom = 153.0

[node name="TitleBar" parent="SettingsWindow/VBoxContainer" index="0"]
margin_right = 298.0
custom_styles/panel = SubResource( 1 )

[node name="Title" parent="SettingsWindow/VBoxContainer/TitleBar" index="0"]
text = "Settings"

[node name="Contents" parent="SettingsWindow/VBoxContainer" index="1"]
margin_right = 298.0
margin_bottom = 152.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="SettingsWindow/VBoxContainer/Contents" index="0"]
margin_right = 298.0
margin_bottom = 142.0
custom_constants/margin_right = 4
custom_constants/margin_top = 8
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow/VBoxContainer/Contents/MarginContainer" index="0"]
margin_left = 4.0
margin_top = 8.0
margin_right = 294.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 107, -95 )
custom_constants/separation = 3

[node name="WinLossMode" type="OptionButton" parent="SettingsWindow/VBoxContainer/Contents/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
margin_right = 290.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
text = "Hide Win/Loss in Character Stats"
items = [ "Hide Win/Loss in Character Stats", null, false, 0, null, "Only Wins in Character Stats", null, false, 1, null, "Show Win/Loss in Character Stats", null, false, 2, null ]
selected = 0

[node name="ChievoPopups" type="CheckButton" parent="SettingsWindow/VBoxContainer/Contents/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 21.0
margin_right = 290.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 4
text = "Hide Achievement Popups"

[node name="MisclickProtection" type="CheckButton" parent="SettingsWindow/VBoxContainer/Contents/MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 42.0
margin_right = 290.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 4
text = "Character Select Misclick Prevention"

[node name="Label" type="Label" parent="SettingsWindow/VBoxContainer/Contents/MarginContainer/VBoxContainer" index="3"]
margin_top = 63.0
margin_right = 290.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
text = "> If on: ALL characters on the character select screen will display an additional \"Play\" confirmation button after the first click (including ones without an options menu)"
autowrap = true

[node name="Space" type="Control" parent="SettingsWindow/VBoxContainer/Contents/MarginContainer/VBoxContainer" index="4"]
margin_top = 105.0
margin_right = 290.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 6 )

[node name="CloseSettings" type="Button" parent="SettingsWindow/VBoxContainer/Contents/MarginContainer/VBoxContainer" index="5"]
unique_name_in_owner = true
margin_top = 114.0
margin_right = 290.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 16 )
size_flags_vertical = 10
text = "Close Settings"

[node name="DebugLayer" type="CanvasLayer" parent="." index="3"]
unique_name_in_owner = true
layer = 5

[node name="DebugWindow" parent="DebugLayer" index="0" instance=ExtResource( 1 )]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 274.0
margin_right = 142.0
margin_bottom = 356.0

[node name="VBoxContainer" parent="DebugLayer/DebugWindow" index="0"]
margin_right = 138.0
margin_bottom = 81.0

[node name="TitleBar" parent="DebugLayer/DebugWindow/VBoxContainer" index="0"]
margin_right = 137.0

[node name="Title" parent="DebugLayer/DebugWindow/VBoxContainer/TitleBar" index="0"]
text = "Codex Debug Tools"

[node name="Contents" parent="DebugLayer/DebugWindow/VBoxContainer" index="1"]
margin_right = 137.0
margin_bottom = 80.0

[node name="ScrollContainer" type="ScrollContainer" parent="DebugLayer/DebugWindow/VBoxContainer/Contents" index="0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 136.0
margin_bottom = 69.0
scroll_horizontal_enabled = false

[node name="DebugSettings" type="VBoxContainer" parent="DebugLayer/DebugWindow/VBoxContainer/Contents/ScrollContainer" index="0"]
unique_name_in_owner = true
margin_right = 135.0
margin_bottom = 67.0
size_flags_horizontal = 3
custom_constants/separation = 2

[node name="Label" type="Label" parent="DebugLayer/DebugWindow/VBoxContainer/Contents/ScrollContainer/DebugSettings" index="0"]
margin_right = 135.0
margin_bottom = 11.0
text = "ACHIEVEMENTS"
align = 1

[node name="DebugAchievementID" type="CheckButton" parent="DebugLayer/DebugWindow/VBoxContainer/Contents/ScrollContainer/DebugSettings" index="1"]
margin_top = 13.0
margin_right = 135.0
margin_bottom = 25.0
text = "Show ID's"

[node name="DebugHiddenAchievement" type="CheckButton" parent="DebugLayer/DebugWindow/VBoxContainer/Contents/ScrollContainer/DebugSettings" index="2"]
margin_top = 27.0
margin_right = 135.0
margin_bottom = 39.0
text = "Show Hidden"

[node name="DebugLockedAchievement" type="CheckButton" parent="DebugLayer/DebugWindow/VBoxContainer/Contents/ScrollContainer/DebugSettings" index="3"]
unique_name_in_owner = true
margin_top = 41.0
margin_right = 135.0
margin_bottom = 53.0
text = "Show All As Locked"

[node name="DebugUnlockedAchievement" type="CheckButton" parent="DebugLayer/DebugWindow/VBoxContainer/Contents/ScrollContainer/DebugSettings" index="4"]
unique_name_in_owner = true
margin_top = 55.0
margin_right = 135.0
margin_bottom = 67.0
text = "Show All As Unlocked"

[editable path="SettingsWindow"]
[editable path="DebugLayer/DebugWindow"]
